# QSlimBrowser

./: CMakeLists.txt  QSlimBrowser.pro  README.md  loginparser.cpp  loginparser.h  main.cpp  mainwindow.cpp  mainwindow.h  scriptparser.cpp  scriptparser.h  userstyleparser.cpp  userstyleparser.h  webengineurlinterceptor.cpp  webengineurlinterceptor.h
Scripts/: amboss-example.txt  facebook-example.txt  github-example.txt  pathoma-example.txt  protonmail-example.txt  uworld-example.txt
